# DatosElectorales

./: .env.example  .gitignore  CARGA_DATOS_HISTORICOS.md  GUIA_E2E.md  METODOLOGIA.md  Plan_DataOps_Electoral_2026.docx  README.md  STATUS.md  plan_extracted.txt  pyproject.toml  run_tiktok.ps1
.claude/: settings.local.json
.github/workflows/: README.md
DL/: README.md
DL/interfaces/: sentiment_wrapper.py
DL/registry/: modelo_sentimiento_prediccion_final_resg_2.ipynb
apps/api/: README.md  __init__.py  deps.py  main.py  models.py  pyproject.toml
apps/web/: README.md
data_pipeline/bronze/: __init__.py  store.py
data_pipeline/flows/: bronze_to_silver.py  ingest_inbox.py  ingest_videos.py  pipeline_e2e.py  quality_gate.py  refresh_views.py  silver_to_gold.py
data_pipeline/gold/: __init__.py  feature_builder.py
data_pipeline/ingestion/: README.md  __init__.py  orchestrator.py  watcher.py
data_pipeline/loaders/: README.md  __init__.py  _client.py  bronze.py  cli.py  gold.py  media.py  runs.py  silver.py  videos.py
data_pipeline/quality/: __init__.py  checks.py  gate.py  tiktok_anonymize.py
data_pipeline/silver/: __init__.py  anonymizer.py  cleaner.py  validator.py
infra/: Pipeline.xml  docker-compose.yml
infra/docker/: api.Dockerfile  scraper-heavy.Dockerfile  scraper-light.Dockerfile  scraper-tiktok.Dockerfile  worker.Dockerfile
infra/supabase/: README.md  apply_migrations.py  seed.sql
ml/interfaces/: __init__.py
scripts/: CARGAR_HISTORICOS.md  cargar_historicos.ps1  cargar_parlamentarias.ps1  scrape_tiktok.ps1  scrape_youtube.ps1  start.ps1
(+31 files in other folders)
